samples/_failures_safe/1761692551_5c44d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_221f9d6c.c: In function ‘main’:
./samples/SAFE/__tmp_221f9d6c.c:147:53: error: expected ‘)’ at end of input
  147 |     if (!validate_and_process_input(&ctx, user_input
      |                                    ~                ^
      |                                                     )
./samples/SAFE/__tmp_221f9d6c.c:147:5: error: expected declaration or statement at end of input
  147 |     if (!validate_and_process_input(&ctx, user_input
      |     ^~
